EPOS/Borland Delphi/Definition Files/Delphi XE3/Definitions.pas


  {Sensor}
    function VCS_SetSensorType(KeyHandle: Longint; NodeID: Word; SensorType: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetSensorType@16';
    function VCS_SetIncEncoderParameter(KeyHandle: Longint; NodeID: Word; EncoderResolution: Longint; InvertedPolarity: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetIncEncoderParameter@20';
    function VCS_SetHallSensorParameter(KeyHandle: Longint; NodeID: Word; InvertedPolarity: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetHallSensorParameter@16';
    function VCS_SetSsiAbsEncoderParameter(KeyHandle: Longint; NodeID: Word; DataRate: Smallint; NbOfMultiTurnDataBits: Smallint; NbOfSingleTurnDataBits: Smallint; InvertedPolarity: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetSsiAbsEncoderParameter@28';
    function VCS_SetSsiAbsEncoderParameterEx(KeyHandle: Longint; NodeID: Word; DataRate: Smallint; NbOfMultiTurnDataBits: Smallint; NbOfSingleTurnDataBits: Smallint; NbOfSpecialDataBits: Smallint; InvertedPolarity: Longint; Timeout: Smallint; PowerupTime: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetSsiAbsEncoderParameterEx@40';
    function VCS_GetSensorType(KeyHandle: Longint; NodeID: Word; var pSensorType: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetSensorType@16';
    function VCS_GetIncEncoderParameter(KeyHandle: Longint; NodeID: Word; var pEncoderResolution: Longint; var pInvertedPolarity: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetIncEncoderParameter@20';
    function VCS_GetHallSensorParameter(KeyHandle: Longint; NodeID: Word; var pInvertedPolarity: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetHallSensorParameter@16';
    function VCS_GetSsiAbsEncoderParameter(KeyHandle: Longint; NodeID: Word; var pDataRate: Smallint; var pNbOfMultiTurnDataBits: Smallint; var pNbOfSingleTurnDataBits: Smallint; var pInvertedPolarity: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetSsiAbsEncoderParameter@28';
    function VCS_GetSsiAbsEncoderParameterEx(KeyHandle: Longint; NodeID: Word; var pDataRate: Smallint; var pNbOfMultiTurnDataBits: Smallint; var pNbOfSingleTurnDataBits: Smallint; var pNbOfSpecialDataBits: Smallint; var pInvertedPolarity: Longint; var pTimeout: Smallint; var pPowerupTime: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetSsiAbsEncoderParameterEx@40';

  {Safety}
    function VCS_SetMaxFollowingError(KeyHandle: Longint; NodeID: Word; MaxFollowingError: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetMaxFollowingError@16';
    function VCS_GetMaxFollowingError(KeyHandle: Longint; NodeID: Word; var pMaxFollowingError: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetMaxFollowingError@16';
    function VCS_SetMaxProfileVelocity(KeyHandle: Longint; NodeID: Word; MaxProfileVelocity: Longword; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetMaxProfileVelocity@16';
    function VCS_GetMaxProfileVelocity(KeyHandle: Longint; NodeID: Word; var pMaxProfileVelocity: Longword; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetMaxProfileVelocity@16';
    function VCS_SetMaxAcceleration(KeyHandle: Longint; NodeID: Word; MaxAcceleration: Longword; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetMaxAcceleration@16';
    function VCS_GetMaxAcceleration(KeyHandle: Longint; NodeID: Word; var pMaxAcceleration: Longword; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetMaxAcceleration@16';

  {Controller Gains}
    function VCS_SetControllerGain(KeyHandle: Longint; NodeID: Word; EController: Word; EGain: Word; Value: Int64; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetControllerGain@28';
    function VCS_GetControllerGain(KeyHandle: Longint; NodeID: Word; EController: Word; EGain: Word; var pValue: Int64; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetControllerGain@24';

  {Inputs Outputs}
    function VCS_DigitalInputConfiguration(KeyHandle: Longint; NodeID: Word; DigInputNb: Word; Configuration: Word; Mask: LongBool; Polarity: LongBool; ExecutionMask: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DigitalInputConfiguration@32';
    function VCS_DigitalOutputConfiguration(KeyHandle: Longint; NodeID: Word; DigOutputNb: Word; Configuration: Word; State: LongBool; Mask: LongBool; Polarity: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_DigitalOutputConfiguration@32';
    function VCS_AnalogInputConfiguration(KeyHandle: Longint; NodeID: Word; AnalogInputNb: Word; Configuration: Word; ExecutionMask: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_AnalogInputConfiguration@24';
    function VCS_AnalogOutputConfiguration(KeyHandle: Longint; NodeID: Word; AnalogOutputNb: Word; Configuration: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_AnalogOutputConfiguration@20';

  {Units}
    function VCS_SetVelocityUnits(KeyHandle: Longint; NodeID: Word; VelDimension: Byte; VelNotation: Shortint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetVelocityUnits@20';
    function VCS_GetVelocityUnits(KeyHandle: Longint; NodeID: Word; var pVelDimension: Byte; var pVelNotation: Shortint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetVelocityUnits@20';

  {Compatibility Functions (do not use)}
    function VCS_SetMotorParameter(KeyHandle: Longint; NodeID: Word; MotorType: Word; ContinuousCurrent: Word; PeakCurrent: Word; PolePair: Byte; ThermalTimeConstant: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetMotorParameter@32';
    function VCS_GetMotorParameter(KeyHandle: Longint; NodeID: Word; var pMotorType: Word; var pContinuousCurrent: Word; var pPeakCurrent: Word; var pPolePair: Byte; var pThermalTimeConstant: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetMotorParameter@32';
    function VCS_SetEncoderParameter(KeyHandle: Longint; NodeID: Word; Counts: Word; PositionSensorType: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetEncoderParameter@20';
    function VCS_GetEncoderParameter(KeyHandle: Longint; NodeID: Word; var pCounts: Word; var pPositionSensorType: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetEncoderParameter@20';

    function VCS_SetPositionRegulatorGain(KeyHandle: Longint; NodeID: Word; P: Word; I: Word; D: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetPositionRegulatorGain@24';
    function VCS_SetPositionRegulatorFeedForward(KeyHandle: Longint; NodeID: Word; VelocityFeedForward: Word; AccelerationFeedForward: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetPositionRegulatorFeedForward@20';
    function VCS_GetPositionRegulatorGain(KeyHandle: Longint; NodeID: Word; var pP: Word; var pI: Word; var pD: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPositionRegulatorGain@24';
    function VCS_GetPositionRegulatorFeedForward(KeyHandle: Longint; NodeID: Word; var pVelocityFeedForward: Word; var pAccelerationFeedForward: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPositionRegulatorFeedForward@20';

    function VCS_SetVelocityRegulatorGain(KeyHandle: Longint; NodeID: Word; P: Word; I: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetVelocityRegulatorGain@20';
    function VCS_SetVelocityRegulatorFeedForward(KeyHandle: Longint; NodeID: Word; VelocityFeedForward: Word; AccelerationFeedForward: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetVelocityRegulatorFeedForward@20';
    function VCS_GetVelocityRegulatorGain(KeyHandle: Longint; NodeID: Word; var pP: Word; var pI: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetVelocityRegulatorGain@20';
    function VCS_GetVelocityRegulatorFeedForward(KeyHandle: Longint; NodeID: Word; var pVelocityFeedForward: Word; var pAccelerationFeedForward: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetVelocityRegulatorFeedForward@20';

    function VCS_SetCurrentRegulatorGain(KeyHandle: Longint; NodeID: Word; P: Word; I: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetCurrentRegulatorGain@20';
    function VCS_GetCurrentRegulatorGain(KeyHandle: Longint; NodeID: Word; var pP: Word; var pI: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetCurrentRegulatorGain@20';

{Operational Mode}
    function VCS_SetOperationMode(KeyHandle: Longint; NodeID: Word; Mode: Shortint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetOperationMode@16';
    function VCS_GetOperationMode(KeyHandle: Longint; NodeID: Word; var pMode: Shortint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetOperationMode@16';

{State Machine}
    function VCS_ResetDevice(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ResetDevice@12';
    function VCS_SetState(KeyHandle: Longint; NodeID: Word; State: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetState@16';
    function VCS_SetEnableState(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetEnableState@12';
    function VCS_SetDisableState(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetDisableState@12';
    function VCS_SetQuickStopState(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetQuickStopState@12';
    function VCS_ClearFault(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ClearFault@12';
    function VCS_GetState(KeyHandle: Longint; NodeID: Word; var pState: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetState@16';
    function VCS_GetEnableState(KeyHandle: Longint; NodeID: Word; var pIsEnabled: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetEnableState@16';
    function VCS_GetDisableState(KeyHandle: Longint; NodeID: Word; var pIsDisabled: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetDisableState@16';
    function VCS_GetQuickStopState(KeyHandle: Longint; NodeID: Word; var pIsQuickStopped: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetQuickStopState@16';
    function VCS_GetFaultState(KeyHandle: Longint; NodeID: Word; var pIsInFault: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetFaultState@16';
